@@ -4,9 +4,10 @@ IN DEVELOPMENT ======= 1.6.0
 - added: middleware to framework.file([name], [fnValidation], [fnExecute], [middleware])
 - added: Response.send([code], body, [contentType])
 - added: Response.json(obj);
+- added: String.parseConfig([default]);
 
 - fixed: controller.custom()
-- fixed: long messages in WebSocket by [Andrea Sessa](https://plus.google.com/u/0/104713619368072403016)
+- fixed: long messages in WebSocket by Andrea Sessa <https://plus.google.com/u/0/104713619368072403016>
 
 - clean code
 - improvements: framework
